# AutoFlow

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  add_tests.py  add_tests_binary.py  build.sh  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.yml  docker-readme.md  package-lock.json
backend/: .env  .env.example  .gitignore  Dockerfile  debug_foreach.py  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.yml  index.md  pyproject.toml  setup.yaml  test_dag_engine.py  test_openclaw_plugin.py
backend/app/: index.md  main.py
backend/app/api/: __init__.py  index.md
backend/app/core/: __init__.py  config.py  database_manager.py  env_secrets.py  hook_manager.py  index.md  node_registry.py  plugin_manager.py  registry.py  router_loader.py  setting_manager.py
backend/app/plugin/: __init__.py  index.md  models.py  plugin_loader.py  registry.py
backend/app/runtime/: __init__.py  actions.py  builtins.py  dag_models.py  data_router.py  execution_state.py  executor.py  flow_loader.py  index.md  models.py  (+12 more)
backend/tests/: conftest.py  index.md  test_api_v2_runs.py  test_api_v2_runs_input.py  test_api_v2_workflows.py  test_condition.py  test_control_flow.py  test_dag_actions.py  test_dag_data_router.py  test_dag_executor.py  test_dag_for_node.py  test_dag_group_node.py  test_dag_if_node.py  test_dag_input_node.py  test_dag_merge_node.py  test_dag_nodes.py  test_dag_retry_node.py  test_dag_scheduler.py  test_dag_split_node.py  test_dag_subflow_node.py  test_dag_switch_node.py  test_dag_while_node.py  test_dag_workflow_runner.py  test_dag_workflow_runner_input.py  test_dag_yaml.py  test_desktop_checkin_plugin.py  test_foreach.py  test_hooks.py  test_minimal_loop.py  test_openclaw_integration.py  test_openclaw_plugin.py  test_output_externalizer.py  test_variable_resolution.py  test_websocket_manager.py  test_zhihu_digest_plugin.py
(+384 files in other folders)
